# refactorCI

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
refactorCI/refactorci/: main.py
refactorCI/tests/: test_node.py
refactorci/: assignment-lists-solutions.py  node_n_ll.py
tests/: test_node.py
