[tool.poetry]
name = "refactorci"
version = "0.1.0"
description = ""
authors = ["Besjana <119148770+b-kubick@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
